--- a/start.html
+++ b/start.html
@@ -1,9 +1,9 @@
 <html>
  <head>
- <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2">
+  <META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=iso-8859-2" charset="utf-8">
  </head>
 <body>
- <h1 align="center">13 Technikum Gdańsk<br>przyjazna szkoła<br>Gdańsk, 24 lutego 2014 r.</h1>
+ <h1 align="center">13 Technikum GdaĂąsk<br>przyjazna szkoÂła<br>GdaĂąsk, 24 lutego 2014 r.</h1>
  <marquee bgcolor="red">Pozdrowienia</marquee>
 </body>
 </html>
