--- a/zadanie_88_musi.html
+++ b/zadanie_88_musi.html
@@ -18,13 +18,11 @@ else
 {
 if (form.txt1.value == "" || form.txt1.value.length<4)
 {
-alert("Za krótkie nazwisko!");
+alert("Nazwisko jest za krótkie!");
 }
 else
 {
 alert("Cześć "+form.txt1.value+" ! Informacja poprawna!");
-}
-
 }
 }
 function test2(form)
